--- a/lib/OMG.client/css/writer.css
+++ b/lib/OMG.client/css/writer.css
@@ -1,3 +1,28 @@
+body {
+  width: 100%;
+  height: 100%;
+  background: hsla(145, 0, 96.6, 1);
+  padding: 0;
+  margin: 0;
+  overflow: hidden;	
+}
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;	
+}
+
+#terminal {
+	width: 100%;
+	height:100%;
+	padding: 0;
+	margin: 0;
+	position:fixed;
+	top: 0;
+	right: 0;
+}
+
 #editor { 
     margin: 0;
     position: absolute;
@@ -44,7 +69,7 @@
   top: 30px;
   right: 70px;
   font-size:50px;
-  color:#fff;
+  color:#533;
 }
 ::selection {
   background-color:transparent;
