--- a/lib/OMG.client/html/templates/start.jade
+++ b/lib/OMG.client/html/templates/start.jade
@@ -1,4 +1,5 @@
 doctype html
+html(lang='en')
 head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
@@ -8,14 +9,12 @@ head
     OMEGA APP
 
 body
+  #terminal
   #box
     for l in list
       h1(class='omega_'+l, id='logo') Ω
       h1(class='dot'+l, id='logo') .
       
-      
-  script(id='source', src="http://localhost:3333/client.deps.js", type="text/javascript", charset="utf-8")
-  script(id='source', src="http://localhost:3333/browserify.js", type="text/javascript", charset="utf-8")
   script(type='text/javascript')
     var winX = window.innerWidth
     ,   winY = window.innerHeight
@@ -23,4 +22,11 @@ body
     box.style.top = winY / 4 + 'px';
     box.style.left = winX / 2 - 117 + 'px';
     box.style.display = 'inline'
-    
+  script(id='source', src="http://localhost:3333/client.deps.js", type="text/javascript", charset="utf-8")
+  script(id='source', src="http://localhost:3333/browserify.js", type="text/javascript", charset="utf-8")
+  script(type='text/javascript')
+    window.onload = function() {
+      var OMG = require('./index.js')
+      ,   omg = new OMG(window);
+      omg.init();
+    }
