--- a/lib/OMG.client/css/omg.css
+++ b/lib/OMG.client/css/omg.css
@@ -1,20 +1,105 @@
+body {
+  width: 100%;
+}
+body {
+  height: 100%;
+}
+body {
+  margin: 0px;
+}
+body {
+  padding: 0px;
+}
+body {
+  background-image: -moz-radial-gradient(51% 43%, #f7f8f5 11%, #5d5d5d);
+}
+body {
+  background-image: -o-radial-gradient(51% 43%, #f7f8f5 11%, #5d5d5d);
+}
+body {
+  background-image: -webkit-radial-gradient(39% 43%, #f8f9f3 11%, #5d5d5d);
+}
+body {
+  overflow: hidden;
+}
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#terminal {
+  width: 62%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#options {
+  width: 38%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+}
+#menuOptions {
+  width: 67%;
+  top: 23.5%;
+  position: absolute;
+  font-size: 37px;
+}
+.menuButton {
+  display: block;
+  margin: 13px 0;
+  color: #5d5d5d;
+  text-shadow: 2px 0px 5px #eee;
+  text-decoration: none;
+  font-weight: 500;
+  z-index: 1;
+  -webkit-transform: scaleX(1.5);
+}
+.menuButton:hover {
+  color: #6c6a42;
+}
+.menuButton:hover:after {
+  content: "  ∆";
+}
+#showOptions {
+  position: fixed;
+  top: 30px;
+  right: 70px;
+  font-size: 50px;
+  color: #533;
+}
+::selection {
+  background-color: transparent;
+}
+#showOptions:hover {
+  cursor: pointer;
+  -webkit-transform: scale(2);
+}
 #box {
-  width: 300px;
+  width: 350px;
   height: 33px;
   position: absolute;
   -webkit-perspective: 1200px;
+  -webkit-transform: matrix(1, 0, 0, 1, 0, 0);
   -moz-perspective: 1200px;
+  -moz-transform: matrix(1, 0, 0, 1, 0, 0);
+  -o-perspective: 1200px;
   display: none;
 }
 #logo {
   width: 300px;
   font-family: Times;
-  font-size: 250px;
+  font-size: 400px;
   position: absolute;
   -webkit-transform-style: preserve-3d;
   -webkit-transform: rotateY(-45deg);
-  -moz-transform-style: preserve-3d;
-  -moz-transform: rotateY(-45deg);
+  -o-transform-style: preserve-3d;
+  -o-transform: rotateY(-45deg);
   line-height: 0;
 }
 .omega_0 {
@@ -23,12 +108,11 @@
   color: rgba(219,219,219,0.50);
 }
 .dot0 {
-  left: 41px;
-  top: -91px;
+  left: 73px;
+  top: -137px;
   z-index: 0;
   color: rgba(219,219,219,0.50);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_1 {
   left: 1px;
@@ -36,12 +120,11 @@
   color: rgba(220,220,220,0.57);
 }
 .dot1 {
-  left: 42px;
-  top: -91px;
+  left: 74px;
+  top: -137px;
   z-index: -1;
   color: rgba(220,220,220,0.57);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_2 {
   left: 2px;
@@ -49,12 +132,11 @@
   color: rgba(221,221,221,0.64);
 }
 .dot2 {
-  left: 43px;
-  top: -91px;
+  left: 75px;
+  top: -137px;
   z-index: -2;
   color: rgba(221,221,221,0.64);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_3 {
   left: 3px;
@@ -62,12 +144,11 @@
   color: rgba(221,222,222,0.71);
 }
 .dot3 {
-  left: 44px;
-  top: -91px;
+  left: 76px;
+  top: -137px;
   z-index: -3;
   color: rgba(221,222,222,0.71);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_4 {
   left: 4px;
@@ -75,12 +156,11 @@
   color: rgba(222,223,223,0.78);
 }
 .dot4 {
-  left: 45px;
-  top: -91px;
+  left: 77px;
+  top: -137px;
   z-index: -4;
   color: rgba(222,223,223,0.78);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_5 {
   left: 5px;
@@ -88,12 +168,11 @@
   color: rgba(223,224,223,0.85);
 }
 .dot5 {
-  left: 46px;
-  top: -91px;
+  left: 78px;
+  top: -137px;
   z-index: -5;
   color: rgba(223,224,223,0.85);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_6 {
   left: 6px;
@@ -101,12 +180,11 @@
   color: rgba(223,225,224,0.92);
 }
 .dot6 {
-  left: 47px;
-  top: -91px;
+  left: 79px;
+  top: -137px;
   z-index: -6;
   color: rgba(223,225,224,0.92);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_7 {
   left: 7px;
@@ -114,12 +192,11 @@
   color: rgba(224,226,225,0.99);
 }
 .dot7 {
-  left: 48px;
-  top: -91px;
+  left: 80px;
+  top: -137px;
   z-index: -7;
   color: rgba(224,226,225,0.99);
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_8 {
   left: 8px;
@@ -127,12 +204,11 @@
   color: #e1e3e2;
 }
 .dot8 {
-  left: 49px;
-  top: -91px;
+  left: 81px;
+  top: -137px;
   z-index: -8;
   color: #e1e3e2;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_9 {
   left: 9px;
@@ -140,12 +216,11 @@
   color: #e2e4e3;
 }
 .dot9 {
-  left: 50px;
-  top: -91px;
+  left: 82px;
+  top: -137px;
   z-index: -9;
   color: #e2e4e3;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_10 {
   left: 10px;
@@ -153,12 +228,11 @@
   color: #e2e5e4;
 }
 .dot10 {
-  left: 51px;
-  top: -91px;
+  left: 83px;
+  top: -137px;
   z-index: -10;
   color: #e2e5e4;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_11 {
   left: 11px;
@@ -166,12 +240,11 @@
   color: #e3e6e4;
 }
 .dot11 {
-  left: 52px;
-  top: -91px;
+  left: 84px;
+  top: -137px;
   z-index: -11;
   color: #e3e6e4;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_12 {
   left: 12px;
@@ -179,12 +252,11 @@
   color: #e4e7e5;
 }
 .dot12 {
-  left: 53px;
-  top: -91px;
+  left: 85px;
+  top: -137px;
   z-index: -12;
   color: #e4e7e5;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_13 {
   left: 13px;
@@ -192,12 +264,11 @@
   color: #e5e8e6;
 }
 .dot13 {
-  left: 54px;
-  top: -91px;
+  left: 86px;
+  top: -137px;
   z-index: -13;
   color: #e5e8e6;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_14 {
   left: 14px;
@@ -205,12 +276,11 @@
   color: #e6e9e7;
 }
 .dot14 {
-  left: 55px;
-  top: -91px;
+  left: 87px;
+  top: -137px;
   z-index: -14;
   color: #e6e9e7;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_15 {
   left: 15px;
@@ -218,12 +288,11 @@
   color: #e6eae8;
 }
 .dot15 {
-  left: 56px;
-  top: -91px;
+  left: 88px;
+  top: -137px;
   z-index: -15;
   color: #e6eae8;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_16 {
   left: 16px;
@@ -231,12 +300,11 @@
   color: #e7ebe9;
 }
 .dot16 {
-  left: 57px;
-  top: -91px;
+  left: 89px;
+  top: -137px;
   z-index: -16;
   color: #e7ebe9;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_17 {
   left: 17px;
@@ -244,12 +312,11 @@
   color: #e8ece9;
 }
 .dot17 {
-  left: 58px;
-  top: -91px;
+  left: 90px;
+  top: -137px;
   z-index: -17;
   color: #e8ece9;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_18 {
   left: 18px;
@@ -257,12 +324,11 @@
   color: #e9ecea;
 }
 .dot18 {
-  left: 59px;
-  top: -91px;
+  left: 91px;
+  top: -137px;
   z-index: -18;
   color: #e9ecea;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_19 {
   left: 19px;
@@ -270,12 +336,11 @@
   color: #eaedeb;
 }
 .dot19 {
-  left: 60px;
-  top: -91px;
+  left: 92px;
+  top: -137px;
   z-index: -19;
   color: #eaedeb;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_20 {
   left: 20px;
@@ -283,12 +348,11 @@
   color: #eaeeec;
 }
 .dot20 {
-  left: 61px;
-  top: -91px;
+  left: 93px;
+  top: -137px;
   z-index: -20;
   color: #eaeeec;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_21 {
   left: 21px;
@@ -296,12 +360,11 @@
   color: #ebefed;
 }
 .dot21 {
-  left: 62px;
-  top: -91px;
+  left: 94px;
+  top: -137px;
   z-index: -21;
   color: #ebefed;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_22 {
   left: 22px;
@@ -309,12 +372,11 @@
   color: #ecf0ee;
 }
 .dot22 {
-  left: 63px;
-  top: -91px;
+  left: 95px;
+  top: -137px;
   z-index: -22;
   color: #ecf0ee;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_23 {
   left: 23px;
@@ -322,12 +384,11 @@
   color: #edf1ef;
 }
 .dot23 {
-  left: 64px;
-  top: -91px;
+  left: 96px;
+  top: -137px;
   z-index: -23;
   color: #edf1ef;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_24 {
   left: 24px;
@@ -335,12 +396,11 @@
   color: #eef2ef;
 }
 .dot24 {
-  left: 65px;
-  top: -91px;
+  left: 97px;
+  top: -137px;
   z-index: -24;
   color: #eef2ef;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_25 {
   left: 25px;
@@ -348,12 +408,11 @@
   color: #eff2f0;
 }
 .dot25 {
-  left: 66px;
-  top: -91px;
+  left: 98px;
+  top: -137px;
   z-index: -25;
   color: #eff2f0;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_26 {
   left: 26px;
@@ -361,12 +420,11 @@
   color: #f0f3f1;
 }
 .dot26 {
-  left: 67px;
-  top: -91px;
+  left: 99px;
+  top: -137px;
   z-index: -26;
   color: #f0f3f1;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_27 {
   left: 27px;
@@ -374,12 +432,11 @@
   color: #f1f4f2;
 }
 .dot27 {
-  left: 68px;
-  top: -91px;
+  left: 100px;
+  top: -137px;
   z-index: -27;
   color: #f1f4f2;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_28 {
   left: 28px;
@@ -387,12 +444,11 @@
   color: #f1f5f3;
 }
 .dot28 {
-  left: 69px;
-  top: -91px;
+  left: 101px;
+  top: -137px;
   z-index: -28;
   color: #f1f5f3;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_29 {
   left: 29px;
@@ -400,12 +456,11 @@
   color: #f2f6f4;
 }
 .dot29 {
-  left: 70px;
-  top: -91px;
+  left: 102px;
+  top: -137px;
   z-index: -29;
   color: #f2f6f4;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_30 {
   left: 30px;
@@ -413,12 +468,11 @@
   color: #f3f6f5;
 }
 .dot30 {
-  left: 71px;
-  top: -91px;
+  left: 103px;
+  top: -137px;
   z-index: -30;
   color: #f3f6f5;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_31 {
   left: 31px;
@@ -426,12 +480,11 @@
   color: #f4f7f5;
 }
 .dot31 {
-  left: 72px;
-  top: -91px;
+  left: 104px;
+  top: -137px;
   z-index: -31;
   color: #f4f7f5;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_32 {
   left: 32px;
@@ -439,12 +492,11 @@
   color: #f5f8f6;
 }
 .dot32 {
-  left: 73px;
-  top: -91px;
+  left: 105px;
+  top: -137px;
   z-index: -32;
   color: #f5f8f6;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_33 {
   left: 33px;
@@ -452,12 +504,11 @@
   color: #f6f9f7;
 }
 .dot33 {
-  left: 74px;
-  top: -91px;
+  left: 106px;
+  top: -137px;
   z-index: -33;
   color: #f6f9f7;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_34 {
   left: 34px;
@@ -465,12 +516,11 @@
   color: #f7f9f8;
 }
 .dot34 {
-  left: 75px;
-  top: -91px;
+  left: 107px;
+  top: -137px;
   z-index: -34;
   color: #f7f9f8;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_35 {
   left: 35px;
@@ -478,12 +528,11 @@
   color: #f8faf9;
 }
 .dot35 {
-  left: 76px;
-  top: -91px;
+  left: 108px;
+  top: -137px;
   z-index: -35;
   color: #f8faf9;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
 .omega_36 {
   left: 36px;
@@ -491,10 +540,9 @@
   color: #f9fbfa;
 }
 .dot36 {
-  left: 77px;
-  top: -91px;
+  left: 109px;
+  top: -137px;
   z-index: -36;
   color: #f9fbfa;
-  -webkit-transform: skewY(60deg);
-  -moz-transform: skewY(60deg);
+  -moz-transform: translate(20px, -13px);
 }
