--- a/lib/OMG.client/html/templates/index.jade
+++ b/lib/OMG.client/html/templates/index.jade
@@ -20,13 +20,13 @@ body(id='master')
     div.icon.publish
       object(style='zoom:5', id='icon_publish', data='/images/noun_project_1316.svg', type='image/svg+xml')
       div.gloss
-    div.icon.satellite
+    div.icon.publish
       object(style='zoom:5', id='icon_publish', data='/images/noun_project_1316.svg', type='image/svg+xml')
       div.gloss
-    div.icon.satellite
+    div.icon.publish
       object(style='zoom:5', id='icon_publish', data='/images/noun_project_1316.svg', type='image/svg+xml')
       div.gloss
-    div.icon.satellite
+    div.icon.publish
       object(style='zoom:5', id='icon_publish', data='/images/noun_project_1316.svg', type='image/svg+xml')
       div.gloss
       
