--- a/lib/OMG.client/css/omg.css
+++ b/lib/OMG.client/css/omg.css
@@ -37,7 +37,7 @@ body {
   left: 0;
   border: 5px solid #333;
   box-shadow: inset 0 0 8px #000;
-  background-image: -webkit-radial-gradient(50% 50%, rgba(248,249,243,0.75) 11%, rgba(93,93,93,0.60));
+  background-image: -webkit-radial-gradient(50% 50%, rgba(248,249,243,0.75), rgba(93,93,93,0.60));
   -webkit-border-radius: 30px;
 }
 #options {
@@ -47,6 +47,7 @@ body {
   right: 0;
   z-index: 1;
   box-shadow: -3px 0 3px #333;
+  background: #5d5d5d;
 }
 .icon {
   width: 176px;
