back to the home oh

--- a/lib/OMG.client/html/templates/frontis.jade
+++ b/lib/OMG.client/html/templates/frontis.jade
@@ -1,4 +1,22 @@
 #terminal
-  h1 OMEGAWD
-
 #options
+  div.icon.publish
+    div.hovr
+      div(style='zoom:1', id='icon')
+        != getSVG('noun_project_1316')
+      div.gloss
+  div.icon.channel
+    div(class='hovr', onclick='')
+      div(style='zoom:1', id='icon')
+        != getSVG('globe')
+      div.gloss
+  div.icon.draftsman
+    div(class='hovr', onclick='omg.writer.create()')
+      div(style='zoom:1', id='icon')
+        != getSVG('pencil')
+      div.gloss
+  div(class='icon profile', data-auth=auth)
+    div(class='hovr', onclick='omg.frontis()')
+      div(style='zoom:1', id='icon')
+        != getSVG('profile')
+      div.gloss
