--- a/lib/OMG.client/html/templates/frontis.jade
+++ b/lib/OMG.client/html/templates/frontis.jade
@@ -6,7 +6,7 @@
         != getSVG('noun_project_1316')
       div.gloss
   div.icon.channel
-    div(class='hovr', onclick='')
+    div(class='hovr', onclick='omg.draw()')
       div(style='zoom:1', id='icon')
         != getSVG('globe')
       div.gloss
