--- a/lib/OMG.client/html/templates/index.jade
+++ b/lib/OMG.client/html/templates/index.jade
@@ -6,6 +6,7 @@ head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
   link(rel="stylesheet", href="/css/omg.css", type="text/css")
+  link(rel="stylesheet", href="/css/writer.css", type="text/css")
   title OMEGA APP
   style(type='text/css')
 
