--- a/lib/OMG.client/html/templates/writer.jade
+++ b/lib/OMG.client/html/templates/writer.jade
@@ -1,15 +1,14 @@
-div(id='showOptions') Ω
-
+div(id='showOptions') 
 
 div#console
   pre#editor
 
 div#options
-  div(class='icon publish')
-    div.hovr
-      div(style='zoom:1', id='icon')
-        != getSVG('noun_project_1316')
-  a(class= 'options', data-event= 'click', id= 'returnHome', href= '#') HOME
+  div(class='icon writerOtions')
+    div(style='zoom:1', id='icon')
+      != getSVG('pencil')
+  div(class='icon writerOtions')
+    div(style='zoom:1', id='icon') l
   br
   a(class= 'options', data-event= 'click', id= 'newWriter', href= '#') NEW
   br
