--- a/lib/OMG.client/css/templates/options.styl
+++ b/lib/OMG.client/css/templates/options.styl
@@ -46,7 +46,7 @@
   width: 176px;
   padding: 27px;
 
-#icon:hover
+.icon:hover
   cursor:pointer
 
 .publish
@@ -69,11 +69,6 @@
 .draftsman:hover
   background: -webkit-radial-gradient(50% 50%, hsla(72, 73, 96.6, .75) 11%, hsla(72, 50, 56.6, .6)), -webkit-gradient(linear, 0% 0%, 0% 120%, from(rgba(255,0,0,1)), to(rgba(210, 20, 25, 1)))  
   cursor: pointer
-
-.writerOptions
-  background: rgba(248,249,243,0.75)
-  cursor: pointer
-  -webkit-transform: scale(.75)
 
 .fudge
   margin-left: -10px    
