--- a/lib/OMG.client/css/templates/omg.styl
+++ b/lib/OMG.client/css/templates/omg.styl
@@ -7,17 +7,12 @@ body
 
 body
   height: 100%
+
 body
   margin: 0px
 
 body
 	padding: 0px
-
-body
-	background-image: -moz-radial-gradient(51% 43%, hsla(72, 20, 96.6, 1) 11%, hsla(72, 0, 36.6, 1))
-
-body
-	background-image: -o-radial-gradient(51% 43%, hsla(72, 20, 96.6, 1) 11%, hsla(72, 0, 36.6, 1))
 
 body
   background: #333
@@ -31,17 +26,19 @@ body
   box-sizing: border-box
 
 #terminal
-	width: 100%
+	width: 78.5%
 	height: 100%
 	padding: 0
 	margin: 0
 	position: absolute
 	top: 0
 	left: 0
-	border: 5px solid #333
-	box-shadow: inset 0 0 8px #000
-	background-image: -webkit-radial-gradient(50% 50%, hsla(72, 33, 96.6, .75), hsla(72, 0, 36.6, .6)) 
-	-webkit-border-radius: 30px
+  border: 5px solid #333
+  box-shadow: inset 0 0 8px #000
+  background:#fff
+  background-image: -webkit-radial-gradient(50% 50%, hsla(72, 33, 96.6, .75), hsla(72, 0, 36.6, .6))
+  -webkit-border-radius: 30px
+  overflow: hidden
 
 #options
   height: 100%
@@ -49,8 +46,11 @@ body
   top: 0
   right: 0
   z-index: 1
-  box-shadow:-3px 0 3px #333
-  background:  hsla(72, 0, 36.6, 1)
+  border: 5px solid #333
+  box-shadow:-3px 0 3px #333, inset 0 0 8px #000
+  background-image: -webkit-linear-gradient(left,hsla(72, 0, 36.6, .6), hsla(72, 13, 86.6, .6), hsla(72, 0, 36.6, .6))
+  -webkit-border-radius: 30px
+  overflow: hidden
 
 .icon
   width: 176px;
@@ -66,7 +66,7 @@ body
   cursor: pointer
 
 .gloss
-  height: 176px;
+  height: 100%;
   -webkit-border-top-right-radius: 88px;
   -webkit-border-top-left-radius: 30px;
   -webkit-border-bottom-right-radius: 120px 20px;
@@ -78,15 +78,14 @@ body
 .gloss:hover
   cursor: pointer
 
-
-#icon
+.frontisIcon
   margin: 31px 0 0 31px
   padding: 0
   border: 7.5px solid transparent
   color: green
   float:left
 
-#icon:hover
+.frontisIcon:hover
   cursor:pointer
 
 .publish
@@ -133,7 +132,3 @@ body
   right: 70px
   font-size:50px
   color:#533
-
-::selection {
-  background-color:pink;
-}
