--- a/lib/OMG.client/html/templates/draw.jade
+++ b/lib/OMG.client/html/templates/draw.jade
@@ -1,30 +1,22 @@
-canvas(id="canvas", resize, style="background:white")
-div(id="options")
-  a(href="javascript:gg.draw.init.apply(gg);") draw
-    ul
-      li
-        a(href="#") Pen
-  a(href="#") shapes
-    ul
-      li
-        a(href="javascript:gg.shapes.line.apply(gg)") line
-      li
-        a(href="javascript:gg.shapes.arc.apply(gg)") Arc
-      li
-        a(href="javascript:gg.shapes.polygon.apply(gg)") polygons
-      li
-        a(href="javascript:gg.shapes.circle.apply(gg)") circles
-      li
-        a(href="javascript:gg.shapes.star.apply(gg)") star-burst
-      li
-        a(href="javascript:gg.shapes.burst.apply(gg)") burbles
-
-  a(href="javascript:gg.txt.init.apply(gg)") txt
-  br
-  a(href="javascript:gg.colorPicker.init.apply(gg);") pallette
-  br
-  a(href="#") select
-  br
-  a(href="#") undo
-  br
-  a(href="#") redo
+canvas(id='canvas', resize, style='background:-webkit-radial-gradient(50% 50%, rgba(248,249,243,0.75), rgba(93,93,93,0.60))')
+ul(id='options')
+  li
+    a(href='javascript:omg.gg.draw.init.apply(omg.gg)') Draw
+  li
+    a(href='javascript:omg.gg.shapes.line.apply(omg.gg)') Line
+  li
+    a(href='javascript:omg.gg.shapes.arc.apply(omg.gg)') Arc
+  li
+    a(href='javascript:omg.gg.shapes.polygon.apply(omg.gg)') Polygon
+  li
+    a(href='javascript:omg.gg.shapes.circle.apply(omg.gg)') Circle
+  li
+    a(href='javascript:omg.gg.shapes.star.apply(omg.gg)') Starburst
+  li
+    a(href='javascript:omg.gg.shapes.burst.apply(omg.gg)') Burble
+  li
+    a(href='javascript:omg.gg.txt.init.apply(omg.gg)') Text
+  li
+    a(href='javascript:omg.gg.colorPicker.init.apply(omg.gg)') Palette
+  li
+    a(href='javascript:omg.gg.xyRangeFinder.apply(omg.gg)') XY Range
