--- a/lib/OMG.client/html/templates/frontis.jade
+++ b/lib/OMG.client/html/templates/frontis.jade
@@ -1,7 +1,7 @@
 #terminal
 #options
   div.icon.publish
-    div.hovr
+    div(class='hovr', onclick='omg.playground()')
       div(style='zoom:1', class='frontisIcon')
         != getSVG('noun_project_1316')
       div.gloss
