--- a/lib/OMG.client/css/playground.css
+++ b/lib/OMG.client/css/playground.css
@@ -1,6 +1,17 @@
 body, div, h1, h2, h3, h4, a, img, audio, video, blockquote, svg, canvas, textarea{
   margin: 0;
   padding: 0;
+	margin-before: 0;
+	margin-after: 0;
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
+	border-style:solid;
+	border-width:0;
+}
+
+p {
+	-webkit-margin-before: 0;
+	-webkit-margin-after: 0;
 }
 
 body {
@@ -120,15 +131,47 @@ span.cssPrimitiveVal:hover {
 	left: 360px;
 	width: 27%;
 	height: 22%;
-	padding:0px;
+	padding:0px;	
 }
 
-.wrapper:hover {
-	border: 1px dashed hsla(205, 90%, 90%, 1);
+.wrapper:hover, wrapper:focus {
+	outline: 1px dashed hsla(205, 90%, 90%, 1);
+}
+
+.Handle {
+	visibility:hidden;
+	height:32px;
+	width:32px;
+	position:absolute;
+	background-size: 512px 480px
+}
+
+.dragHandle {
+	background-position: 0px -160px; 
+}
+.rotateHandle {
+	background-position: 0px -160px; 
+}
+.handlePosTopRight {
+	top:0px;
+	right: -32px;
+}
+.handlePosTopLeft {
+	top:0px;
+	left: -32px;
+}
+
+.wrapper:hover > .Handle {
+	visibility:visible;
+}
+
+.Handle:hover {
+	visibility:visible;
 }
 
 .media {
 	width:100%;
+	height:100%;
 }
 .media:not(button, input, textarea) {
 	height:100%;
@@ -136,7 +179,8 @@ span.cssPrimitiveVal:hover {
 
 textarea.media {
 	font-size:2em;
-	height:67%;
+	width:100%;
+	height:100%;
 }
 
 .hovered > * {
