--- a/lib/OMG.client/css/ui-lightness/jqueryui.ui.css
+++ b/lib/OMG.client/css/ui-lightness/jqueryui.ui.css
@@ -270,7 +270,7 @@
 .ui-icon-grip-solid-vertical { background-position: -32px -224px; }
 .ui-icon-grip-solid-horizontal { background-position: -48px -224px; }
 .ui-icon-gripsmall-diagonal-ne { background-position: -32px -160px; background-size: 512px 480px}
-.ui-icon-gripsmall-diagonal-se { background-position: -32px -160px; background-size: 512px 480px}
+.ui-icon-gripsmall-diagonal-se { background-position: -160px -448px; background-size: 512px 480px}
 .ui-icon-grip-diagonal-se { background-position: -80px -224px; }
 
 
@@ -301,7 +301,7 @@
 .ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
 .ui-resizable-e { cursor: e-resize; width: 7px; right: -5px; top: 0; height: 100%; }
 .ui-resizable-w { cursor: w-resize; width: 7px; left: -5px; top: 0; height: 100%; }
-.ui-resizable-se { cursor: all-scroll; width: 32px; height: 32px;  right: 0px; bottom: 0px; }
+.ui-resizable-se { cursor: se-resize; width: 32px; height: 32px;  right: 0px; bottom: 0px; }
 .ui-resizable-sw { cursor: sw-resize; width: 9px; height: 9px; left: -5px; bottom: -5px; }
 .ui-resizable-nw { cursor: nw-resize; width: 9px; height: 9px; left: -5px; top: -5px; }
 .ui-resizable-ne {  cursor: all-scroll; width: 32px; height: 32px; right: -32px; top: 0px;}/*
