--- a/lib/OMG.client/css/playground.css
+++ b/lib/OMG.client/css/playground.css
@@ -5,6 +5,7 @@ body, div, h1, h2, h3, h4, a, img, ul, audio, video, blockquote, svg, canvas, te
 	margin-after: 0;
 	-webkit-margin-before: 0;
 	-webkit-margin-after: 0;
+	-webkit-padding-start: 0;
 	border-style:solid;
 	border-width:0;
 }
@@ -86,14 +87,56 @@ span.cssPrimitiveVal, span.cssPrimitiveUnit {
 span.cssPrimitiveVal:hover {
 	cursor: move;
 }
-
-.selector {
-	-webkit-transform: scale(2);
-	-mox-transform: scale(2);
-	display:block;
-	margin:16px 0;
+ul.menuList{
+	width:100%;
+	display:inline-block;
+	border: 1px solid #000;
+	list-style-type: none;
+	margin: 1ex
 }
 
+ul.menuList > li {
+	display:none;
+}
+
+ul.menuList:nth-child(3){
+	background:yellow;
+}
+
+ul.menuList:nth-child(3) > li{
+	display:inline-block;
+}
+
+li.templateSelector, li.layoutSelector {
+	width:29%;
+	margin:7px;
+	border-radius: 5px;
+	border:2px solid pink;
+	background:#efe;
+	color:#333;
+	box-shadow:inset 0 0 3px #333;
+	display:inline-block;
+	list-style-type: none;
+	text-align: center
+	
+}
+li.templateSelector:hover, li.layoutSelector:hover {
+	background:#333;
+	color:orange;
+	box-shadow:inset 0 0 3px #efe;
+}
+
+li.templateSelector > h1, li.layoutSelector > h1, ul.menuList > h1 {
+	list-style-type: none	font-size:2.1em;
+	display:inline-inline;
+	padding:20px 0;
+	text-align: center;
+	
+}
+
+li.templateSelector > h1:hover, li.layoutSelector > h1:hover {
+	cursor:pointer
+}
 
 
 .ranger{
