--- a/lib/OMG.client/html/client/playground.jade
+++ b/lib/OMG.client/html/client/playground.jade
@@ -3,7 +3,7 @@ div(class='toolSet', id='toolSet')
   ul(class='menuList', id='metaMenu') 
     h1 META
     br
-    for x in layouts
+    for x in meta
       li(class='layoutSelector')
         h1(class='setLayout', data-event='click', data-type=x)= x
   ul(class='menuList', id='layoutMenu') 
@@ -13,8 +13,14 @@ div(class='toolSet', id='toolSet')
       li(class='layoutSelector')
         h1(class='setLayout', data-event='click', data-type=x)= x
   ul(class='menuList', id='templatesMenu') 
-    h1 TEMPLATES
+    h1 Elements
     br
     for x in elemenos
+      li(class='templateSelector')
+        h1(class='createHTMLelem', data-event='click', data-type=x)= x
+  ul(class='menuList', id='templatesMenu') 
+    h1 Templates
+    br
+    for x in templates
       li(class='templateSelector')
         h1(class='createHTMLelem', data-event='click', data-type=x)= x
